--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -12,14 +12,17 @@
 
 <MudLayout>
     <!-- Pasek nawigacyjny -->
-    <MudAppBar Color="Color.Primary">
+    <MudAppBar Class="custom-appbar">
         <MudText Typo="Typo.h5" Class="ml-4">SOI Manager</MudText>
         <MudSpacer />
     </MudAppBar>
 
+
+
+
     <!-- Stały drawer -->
     <MudDrawer Open="true" Anchor="Anchor.Start" Elevation="1" Variant="DrawerVariant.Persistent"
-               MiniVariantWidth="56px">
+    MiniVariantWidth="56px">
         <MudNavMenu Class="mud-width-full px-3">
             <MudText Typo="Typo.h6" Class="py-3 text-primary">Nawigacja</MudText>
             <MudDivider Class="mb-2" />
