--- a/Components/Pages/TableWorker.razor
+++ b/Components/Pages/TableWorker.razor
@@ -1,15 +1,17 @@
-﻿@page "/"
+﻿@page "/workers"
 @using MSOI.Models
-@using MSOI.Services
-@inject WorkerService WorkerService
-@inject WorkerItemService WorkerItemService
+@using MSOI.Services;
+@using MSOI.Services.ServiceImplementation
+
+@inject IWorkerService WorkerService
+@inject IWorkerItemService WorkerItemService
 
 <MudContainer Style="width: 100%; max-width: 100%;">
     <MudGrid>
         <!-- Lewa sekcja: Lista Pracowników -->
         <MudItem xs="12" md="7">
             <MudTable T="WorkerModel" Items="@workers" Hover="true" Breakpoint="Breakpoint.Sm" @ref="mudTable" Style="width: 100%;"
-            RowClass="cursor-pointer" OnRowClick="RowClickEvent">
+                      RowClass="cursor-pointer" OnRowClick="RowClickEvent">
                 <ToolBarContent>
                     <MudGrid>
                         <MudItem xs="12" md="6">
@@ -17,11 +19,11 @@
                         </MudItem>
                         <MudItem xs="12" md="6">
                             <MudTextField T="string" ValueChanged="@(s=>SetWorkerName(s))" Placeholder="Wyszukaj: imie" Adornment="Adornment.Start"
-                            AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+                                          AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
                             <MudTextField T="string" ValueChanged="@(s=>SetPesel(s))" Placeholder="Wyszukaj: PESEL" Adornment="Adornment.Start"
-                            AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
-                        </MudItem>       
-                    </MudGrid>                    
+                                          AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+                        </MudItem>
+                    </MudGrid>
                 </ToolBarContent>
                 <HeaderContent>
                     <MudTh>Nr</MudTh>
@@ -47,7 +49,7 @@
         <!-- Prawa sekcja: Przyporządkowane przedmioty -->
         <MudItem xs="12" md="5">
 
-            @if(workerItems.Count == 0)
+            @if (workerItems.Count == 0)
             {
                 <MudItem xs="12" md="5">
                     <MudText Typo="Typo.h3">Wybierz pracownika obok, aby wyświetlić przedmioty.</MudText>
@@ -61,7 +63,7 @@
                         <MudGrid>
                             <MudItem xs="12" md="6">
                                 <MudText Typo="Typo.h3">Przedmioty</MudText>
-                                </MudItem>
+                            </MudItem>
                         </MudGrid>
                     </ToolBarContent>
                     <HeaderContent>
@@ -81,7 +83,7 @@
                         <MudTd DataLabel="Data wymiany">@context.Exchange_date.ToString("dd.MM.yyyy")</MudTd>
                     </RowTemplate>
                 </MudTable>
-            }           
+            }
         </MudItem>
     </MudGrid>
 </MudContainer>
