--- a/Components/App.razor
+++ b/Components/App.razor
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <Routes @rendermode=RenderMode.InteractiveServer />
+    <Routes @rendermode=RenderMode.InteractiveServer /> 
     @* <script src="_framework/blazor.web.js"></script> *@
     <script src="_framework/blazor.server.js"></script>
 </body>
 
-<CascadingAuthenticationState>
+@* <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
@@ -26,3 +26,4 @@
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
+ *@
