Worker Edition (kinda,,,)

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -10,6 +10,8 @@
 @* Needed for snackbars *@
 <MudSnackbarProvider />
 
+<MudPopoverProvider />
+
 <MudLayout>
     <MudMainContent>
         <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge" Style="width: 100%; max-width: 100%; padding-bottom: 80px;">
